parse arguments as templates + execute commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 
 [dependencies]
+docopt = "^0.6.86"
+rustc-serialize = "^0.3.21"
+handlebars = "^0.22.0"
