--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ rustc-serialize = "^0.3.21"
 handlebars = "^0.22.0"
 memmap = "^0.5.0"
 nix = "^0.7.0"
+walkdir = "*"
+regex = "*"
+clap = "*"
+chan = "*"
